--- a/Laroni-Travel/View/HomeView.xaml
+++ b/Laroni-Travel/View/HomeView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Laroni_Travel.View.TestHome"
+﻿<Window x:Class="Laroni_Travel.View.HomeView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Laroni_Travel.View"
         mc:Ignorable="d"
-        Title="TestHome" Height="450" Width="800">
+        Title="HomeView" Height="450" Width="800">
     <Grid>
         
     </Grid>
