Navbar toegevoegd aan Dashboard-, Persoon-, Reizen-, OpleidingenViews

--- a/Laroni-Travel/View/InlogView.xaml
+++ b/Laroni-Travel/View/InlogView.xaml
@@ -48,12 +48,15 @@
         TextWrapping="Wrap"
         VerticalScrollBarVisibility="Auto" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
         <PasswordBox
-        materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
+            materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
         VerticalAlignment="Center"
+        Password="Laroni-Travel"
         materialDesign:HintAssist.Hint="Wachtwoord"
-        IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedPasswordBox}"
-        Style="{StaticResource MaterialDesignOutlinedPasswordBox}"
+        materialDesign:TextFieldAssist.HasClearButton="True"
+        IsEnabled="{Binding ElementName=RevealPasswordOutlinedEnabled, Path=IsChecked}"
+        Style="{StaticResource MaterialDesignOutlinedRevealPasswordBox}"
         Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Background="White" Foreground="Black" Margin="15" />
+
         <CheckBox
         x:Name="MaterialDesignOutlinedPasswordBoxEnabledComboBox"
         Content="Onthoud wachtwoord"
