--- a/Laroni-Travel/View/InlogView.xaml
+++ b/Laroni-Travel/View/InlogView.xaml
@@ -39,6 +39,7 @@
         <Image VerticalAlignment="Top" HorizontalAlignment="Center" Width="300" Height="300" Source="Image\Laroni-Travel.png" Grid.Row="2" Grid.Column="0" Grid.RowSpan="4" Margin="10" />
         <Label Content="Aanmelden" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="15" FontSize="32" Foreground="White" />
         <TextBox
+        Text="{Binding Email}"
         materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
         VerticalAlignment="center"
         materialDesign:HintAssist.Hint="Emailadres"
@@ -63,6 +64,6 @@
         Grid.Column="1" Grid.Row="4" Margin="15" VerticalAlignment="Top" Foreground="White" />
         <Button Content="Wachtwoord vergeten ?" Grid.Row="4" Grid.Column="2" VerticalAlignment="Top" Margin="15" Style="{StaticResource MaterialDesignFlatDarkButton}"
   ToolTip="MaterialDesignFlatButton" Foreground="White" />
-        <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Content="Aanmelden" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Margin="15" Background="#3D004E" />
+        <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Content="Aanmelden" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="OpenHomeView"/>
     </Grid>
 </Window>
