--- a/Laroni-Travel/View/PersoonView.xaml
+++ b/Laroni-Travel/View/PersoonView.xaml
@@ -12,7 +12,7 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
-        FontFamily="{DynamicResource MaterialDesignFont}">
+        FontFamily="{DynamicResource MaterialDesignFont}" Loaded="Window_Loaded">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
@@ -49,7 +49,7 @@
         Style="{StaticResource MaterialDesignOutlinedTextBox}"
         TextWrapping="Wrap"
         VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
-                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Content="Zoeken" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken"/>
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Content="Zoeken" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken" />
                 <DataGrid ItemsSource="{Binding Deelnemers}"
                   SelectedItem="{Binding GeselecteerdeDeelnemer}"
 
@@ -104,7 +104,7 @@
     TextWrapping="Wrap"
     VerticalScrollBarVisibility="Auto"
     Grid.Row="4" Grid.Column="0" Background="White" Margin="10" />
-                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Geboortedatum" Grid.Row="5" Grid.Column="0" Text="{Binding Geboortedatum}"/>
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Geboortedatum" Grid.Row="5" Grid.Column="0" Text="{Binding Geboortedatum}" />
                 <TextBox
                     Text="{Binding Email}"
     VerticalAlignment="Top"
@@ -167,10 +167,10 @@
                 <CheckBox
                     IsChecked="{Binding Admin}"
         Content="Admin" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Toevoegen" Grid.Row="7" Grid.Column="0" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Toevoegen"/>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Aanmaken" Grid.Row="7" Grid.Column="1" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Aanpassen"/>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Verwijderen" Grid.Row="7" Grid.Column="2" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Verwijderen"/>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Annuleren" Grid.Row="8" Grid.Column="1" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Resetten"/>
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Toevoegen" Grid.Row="7" Grid.Column="0" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Toevoegen" />
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Aanmaken" Grid.Row="7" Grid.Column="1" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Aanpassen" />
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Verwijderen" Grid.Row="7" Grid.Column="2" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Verwijderen" />
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Annuleren" Grid.Row="8" Grid.Column="1" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Resetten" />
             </Grid>
         </ScrollViewer>
         <Grid Width="200" HorizontalAlignment="Left" Background="#060047">
@@ -178,39 +178,31 @@
                 <Grid Height="150" VerticalAlignment="Top">
                     <Image Source="Image\Laroni-Travel.png" Width="150" Height="150" Grid.Row="0" />
                 </Grid>
-                <ListView>
-                    <ListViewItem>
+                <ListView x:Name="lvNavbar" SelectionChanged="lvNavbar_SelectionChanged">
+                    <ListViewItem x:Name="lviDashboard">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Monitor" Foreground="White" Width="25" Height="25" Margin="5" />
                             <TextBlock Text="Dashboard" Foreground="White" FontSize="24" Margin="5" />
                         </StackPanel>
                     </ListViewItem>
-                </ListView>
-                <ListView>
-                    <ListViewItem>
+                    <ListViewItem x:Name="lviPersonen">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Account" Foreground="White" Width="25" Height="25" Margin="5" />
                             <TextBlock Text="Personen" Foreground="White" FontSize="24" Margin="5" />
                         </StackPanel>
                     </ListViewItem>
-                </ListView>
-                <ListView>
-                    <ListViewItem>
+                    <ListViewItem x:Name="lviReizen">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Globe" Foreground="White" Width="25" Height="25" Margin="5" />
                             <TextBlock Text="Reizen" Foreground="White" FontSize="24" Margin="5" />
                         </StackPanel>
                     </ListViewItem>
-                </ListView>
-                <ListView>
-                    <ListViewItem>
+                    <ListViewItem x:Name="lviOpleidingen">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="School" Foreground="White" Width="25" Height="25" Margin="5" />
                             <TextBlock Text="Opleidingen" Foreground="White" FontSize="24" Margin="5" />
                         </StackPanel>
                     </ListViewItem>
-                </ListView>
-                <ListView>
                     <ListViewItem>
                         <StackPanel Orientation="Horizontal">
                             <TextBox
@@ -225,9 +217,7 @@
                                 VerticalScrollBarVisibility="Auto" Foreground="White" />
                         </StackPanel>
                     </ListViewItem>
-                </ListView>
-                <ListView>
-                    <ListViewItem>
+                    <ListViewItem x:Name="lviLogout">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Logout" Foreground="White" Width="45" Height="50" Margin="65 15 65 100" VerticalAlignment="Center" />
                         </StackPanel>
