--- a/Laroni-Travel/View/PersoonView.xaml
+++ b/Laroni-Travel/View/PersoonView.xaml
@@ -51,7 +51,7 @@
         VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
                 <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Content="Zoeken" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken" />
                 <DataGrid ItemsSource="{Binding Deelnemers}"
-                  SelectedItem="{Binding GeselecteerdeDeelnemer}"
+                  SelectedItem="{Binding SelectedDeelnemer}"
 
                   AutoGenerateColumns="False" IsReadOnly="True"
                   AlternatingRowBackground="#BC80AB"
@@ -75,7 +75,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <TextBox
-                    Text="{Binding Voornaam}"
+                    Text="{Binding DeelnemerRecord.Voornaam}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Voornaam"
     AcceptsReturn="True"
@@ -85,7 +85,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="2" Grid.Column="0" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding Familienaam}"
+                    Text="{Binding DeelnemerRecord.Familienaam}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Familienaam"
     AcceptsReturn="True"
@@ -95,7 +95,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="3" Grid.Column="0" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding Geslacht}"
+                    Text="{Binding DeelnemerRecord.Geslacht}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Geslacht"
     AcceptsReturn="True"
@@ -106,7 +106,7 @@
     Grid.Row="4" Grid.Column="0" Background="White" Margin="10" />
                 <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Geboortedatum" Grid.Row="5" Grid.Column="0" Text="{Binding Geboortedatum}" />
                 <TextBox
-                    Text="{Binding Email}"
+                    Text="{Binding DeelnemerRecord.Email}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Email"
     AcceptsReturn="True"
@@ -116,7 +116,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="6" Grid.Column="0" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding Straatnaam}"
+                    Text="{Binding DeelnemerRecord.Straatnaam}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Straatnaam"
     AcceptsReturn="True"
@@ -126,7 +126,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="2" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding Huisnummer}"
+                    Text="{Binding DeelnemerRecord.Huisnummer}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Huisnummer"
     AcceptsReturn="True"
@@ -136,7 +136,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding Postcode}"
+                    Text="{Binding DeelnemerRecord.Postcode}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Postcode"
     AcceptsReturn="True"
@@ -146,7 +146,7 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
-                    Text="{Binding Gemeente}"
+                    Text="{Binding DeelnemerRecord.Gemeente}"
     VerticalAlignment="Top"
     materialDesign:HintAssist.Hint="Gemeente"
     AcceptsReturn="True"
@@ -156,16 +156,16 @@
     VerticalScrollBarVisibility="Auto"
     Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
                 <CheckBox
-                    IsChecked="{Binding Ziekenfons}"
+                    IsChecked="{Binding DeelnemerRecord.Ziekenfonds}"
         Content="Lid Ziekenfonds" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <CheckBox
-                    IsChecked="{Binding Monitor}"
+                    IsChecked="{Binding DeelnemerRecord.Monitor}"
         Content="Monitor" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <CheckBox
-                    IsChecked="{Binding Hoofdmonitor}"
+                    IsChecked="{Binding DeelnemerRecord.Hoofdmonitor}"
         Content="Hoofdmonitor" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <CheckBox
-                    IsChecked="{Binding Admin}"
+                    IsChecked="{Binding DeelnemerRecord.Admin}"
         Content="Admin" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Toevoegen" Grid.Row="7" Grid.Column="0" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Toevoegen" />
                 <Button materialDesign:ButtonAssist.CornerRadius="10" Content="Aanmaken" Grid.Row="7" Grid.Column="1" Margin="10" Background="#3D004E" Command="{Binding}" CommandParameter="Aanpassen" />
