--- a/Laroni-Travel/View/ReizenView.xaml
+++ b/Laroni-Travel/View/ReizenView.xaml
@@ -25,34 +25,33 @@
                 <Grid Height="150" VerticalAlignment="Top">
                     <Image Source="Image\Laroni-Travel.png" Width="150" Height="150" Grid.Row="0" />
                 </Grid>
-                <ListView x:Name="lvNavbar" SelectionChanged="lvNavbar_SelectionChanged">
-                    <ListViewItem x:Name="lviDashboard">
+                <ListView x:Name="lvNavbar">
+                    <Button VerticalAlignment="Top" Style="{StaticResource MaterialDesignFlatDarkButton}" ToolTip="MaterialDesignFlatButton" Foreground="White" Height="50" Command="{Binding}" CommandParameter="OpenHomeView">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Monitor" Foreground="White" Width="25" Height="25" Margin="5" />
-                            <TextBlock Text="Dashboard" Foreground="White" FontSize="24" Margin="5" />
+                            <materialDesign:PackIcon Kind="Monitor" Margin="0 0 10 0" Width="24" Height="24" />
+                            <TextBlock FontSize="22">Dashboard</TextBlock>
                         </StackPanel>
-                    </ListViewItem>
-                    <ListViewItem x:Name="lviPersonen">
+                    </Button>
+                    <Button VerticalAlignment="Top" Style="{StaticResource MaterialDesignFlatDarkButton}" ToolTip="MaterialDesignFlatButton" Foreground="White" Height="50" Command="{Binding}" CommandParameter="OpenPersonenView">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Account" Foreground="White" Width="25" Height="25" Margin="5" />
-                            <TextBlock Text="Personen" Foreground="White" FontSize="24" Margin="5" />
+                            <materialDesign:PackIcon Kind="Person" Margin="0 0 10 0" Width="24" Height="24" />
+                            <TextBlock FontSize="22">Personen</TextBlock>
                         </StackPanel>
-                    </ListViewItem>
-                    <ListViewItem x:Name="lviReizen">
+                    </Button>
+                    <Button VerticalAlignment="Top" Style="{StaticResource MaterialDesignFlatDarkButton}" ToolTip="MaterialDesignFlatButton" Foreground="White" Height="50" Command="{Binding}" CommandParameter="OpenReizenView">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Globe" Foreground="White" Width="25" Height="25" Margin="5" />
-                            <TextBlock Text="Reizen" Foreground="White" FontSize="24" Margin="5" />
+                            <materialDesign:PackIcon Kind="Globe" Margin="0 0 10 0" Width="24" Height="24" />
+                            <TextBlock FontSize="22">Reizen</TextBlock>
                         </StackPanel>
-                    </ListViewItem>
-                    <ListViewItem x:Name="lviOpleidingen">
+                    </Button>
+                    <Button VerticalAlignment="Top" Style="{StaticResource MaterialDesignFlatDarkButton}" ToolTip="MaterialDesignFlatButton" Foreground="White" Height="50" Command="{Binding}" CommandParameter="OpenOpleidingView">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="School" Foreground="White" Width="25" Height="25" Margin="5" />
-                            <TextBlock Text="Opleidingen" Foreground="White" FontSize="24" Margin="5" />
+                            <materialDesign:PackIcon Kind="School" Margin="0 0 10 0" Width="24" Height="24" />
+                            <TextBlock FontSize="22">Opleiding</TextBlock>
                         </StackPanel>
-                    </ListViewItem>
-                    <ListViewItem>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox
+                    </Button>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox
                                 Width="150"
                                 Margin="10"
                                 BorderBrush="#553370"
@@ -62,13 +61,12 @@
                                 Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                 TextWrapping="Wrap"
                                 VerticalScrollBarVisibility="Auto" Foreground="White" />
+                    </StackPanel>
+                    <Button VerticalAlignment="Top" Style="{StaticResource MaterialDesignFlatDarkButton}" ToolTip="MaterialDesignFlatButton" Foreground="White" Height="50" Command="{Binding}" CommandParameter="OpenInlogView">
+                        <StackPanel Orientation="Horizontal" Margin="50 0 50 0">
+                            <materialDesign:PackIcon Kind="Logout" Margin="0 0 10 0" Width="24" Height="24" />
                         </StackPanel>
-                    </ListViewItem>
-                    <ListViewItem x:Name="lviLogout">
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Logout" Foreground="White" Width="45" Height="50" Margin="65 15 65 100" VerticalAlignment="Center" />
-                        </StackPanel>
-                    </ListViewItem>
+                    </Button>
                 </ListView>
             </StackPanel>
         </Grid>
