--- a/Laroni-Travel/View/PersoonView.xaml
+++ b/Laroni-Travel/View/PersoonView.xaml
@@ -201,7 +201,7 @@
                         <TextBlock>Annuleren</TextBlock>
                     </StackPanel>
                 </Button>
-                <DataGrid ItemsSource="{Binding Medisch}"
+                <DataGrid ItemsSource="{Binding MedischLijst}"
                   SelectedItem="{Binding SelectedMedisch}"
                   AutoGenerateColumns="False" IsReadOnly="True"
                   AlternatingRowBackground="#BC80AB"
@@ -243,25 +243,25 @@
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto"
                     Grid.Row="10" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" Background="White" Margin="10" />
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="8" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="Toevoegen">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="8" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenMedisch">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="add" Margin="0 0 10 0" />
                         <TextBlock>Ziekte</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="9" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="Aanpassen">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="9" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="AanpassenMedisch">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Edit" Margin="0 0 10 0" />
                         <TextBlock>Ziekte</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="10" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="Verwijderen">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="10" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenMedisch">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Delete" Margin="0 0 10 0" />
                         <TextBlock>Ziekte</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="11" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="Resetten">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="11" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ResettenMedisch">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Cancel" Margin="0 0 10 0" />
                         <TextBlock>Annuleren</TextBlock>
